// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> renders name of other users correctly 1`] = `
<div
  className="ChatMessage-messageWrapper-64"
>
  <div
    className="MuiPaper-root-70 MuiPaper-elevation2-74 MuiPaper-rounded-71 ChatMessage-message-66"
  >
    <span
      className="MuiTypography-root-97 MuiTypography-caption-107"
    >
      123
    </span>
    <p
      className="MuiTypography-root-97 MuiTypography-body1-106"
    >
      Hello
    </p>
    <span
      className="MuiTypography-root-97 MuiTypography-caption-107"
    >
      1 min ago.
    </span>
  </div>
  <div
    className="Avatar-row-123"
  >
    <div
      className="MuiAvatar-root-124 MuiAvatar-colorDefault-125"
      style={
        Object {
          "backgroundColor": "#f44336",
          "margin": 10,
        }
      }
    >
      1
    </div>
  </div>
</div>
`;

exports[`<Avatar /> renders status message 1`] = `
<div
  className="ChatMessage-messageWrapper-64"
>
  <p
    className="MuiTypography-root-97 MuiTypography-body1-106 ChatMessage-statusMessage-68"
  >
    <span
      className="MuiTypography-root-97 MuiTypography-caption-107 ChatMessage-statusMessageUser-69"
      style={
        Object {
          "color": "#607d8b",
        }
      }
    >
      123
    </span>
     joined
    <span
      className="MuiTypography-root-97 MuiTypography-caption-107"
    >
      2 days ago
    </span>
  </p>
</div>
`;
